--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>4.0.1</version>
       <scope>provided</scope>
-    </dependency>                                                                            
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -37,7 +38,8 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>      </dependencies>
+    </dependency>
+  </dependencies>
 
   <build>
       <plugins>
